--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <nav class="fixedBar">
       <h1>Loopstudios</h1>
       <ul class="list-container">
-        <li><a href="#section1">About</a></li>
-        <li><a href="#section2">Careers</a></li>
-        <li><a href="#section3">Events</a></li>
-        <li><a href="#section4">Products</a></li>
+        <li><a href="#section1">A propos</a></li>
+        <li><a href="#section2">Carrières</a></li>
+        <li><a href="#section3">Événements</a></li>
+        <li><a href="#section4">Nos produits</a></li>
         <li><a href="#section5">Support</a></li>
       </ul>
       <div class="toggle-btn">
@@ -28,23 +28,23 @@
       </div>
     </nav>
     
-    <p class="caps">Immersive experiences that deliver</p>
+    <p class="caps">Des expériences immersives</p>
   </header>
 
   <main class="main">
     <section id="section2">
       <img src="./assets/images/desktop/image-interactive.jpg" alt="ImageInteractive">
       <article>
-        <h2 class="caps">The leader in interactive VR</h2>
-        <p>Founded in 2011, Loopstudios has been producing world-class virtual reality
-          projects for some of the best companies around the globe. Our award-winning
-          creations have transformed businesses through digital experiences that bind
-          to their brand.</p>
+        <h2 class="caps">Le leader de la VR interactive</h2>
+        <p>Fondé en 2011, Loopstudios produit de la réalité virtuelle de classe mondiale
+          projets pour certaines des meilleures entreprises du monde. Notre lauréat
+          les créations ont transformé les entreprises grâce à des expériences numériques qui lient
+          à leur marque..</p>
       </article>
     </section>
     <section id="section3">
-      <h2 class="caps">Our creations</h2>
-      <button class="caps desktop-btn">See all</button>
+      <h2 class="caps">Nos créations</h2>
+      <button class="caps desktop-btn">Voir tout</button>
     </section>
     <section id="section4">
       <article class="desktop4">
@@ -117,7 +117,7 @@
         </div>
       </article>
     </section>
-    <button class="caps mobile-btn">See all</button>
+    <button class="caps mobile-btn">Voir tout</button>
   </main>
   <section id="section5">
     <footer>
@@ -125,11 +125,11 @@
         <h3>Loopstudios</h3>
         <nav>
           <ul>
-            <li><a href="#section1">About</a></li>
-            <li><a href="#section2">Careers</a></li>
-            <li><a href="#section3">Events</a></li>
-            <li><a href="#section4">Products</a></li>
-            <li><a href="#section5">Support</a></li>
+            <li><a href="#section1">A propos</a></li>
+        <li><a href="#section2">Carrières</a></li>
+        <li><a href="#section3">Événements</a></li>
+        <li><a href="#section4">Nos produits</a></li>
+        <li><a href="#section5">Support</a></li>
           </ul>
         </nav>
       </div>
@@ -140,7 +140,7 @@
           <img src="./assets/images/icon-pinterest.svg" alt="Pinterest">
           <img src="./assets/images/icon-instagram.svg" alt="Instagram">
         </div>
-        <p class="">© 2021 Loopstudios. All rights reserved.</p>
+        <p class="">© 2021 Loopstudios. Tous droits réservés.</p>
       </div>
     </footer>
   </section>
@@ -148,10 +148,10 @@
   <div class="menuBar" id="menu">
     <nav class="menu-container">
       <ul>
-        <li><a href="#section1">About</a></li>
-        <li><a href="#section2">Careers</a></li>
-        <li><a href="#section3">Events</a></li>
-        <li><a href="#section4">Products</a></li>
+        <li><a href="#section1">A propos</a></li>
+        <li><a href="#section2">Carrières</a></li>
+        <li><a href="#section3">Événements</a></li>
+        <li><a href="#section4">Nos produits</a></li>
         <li><a href="#section5">Support</a></li>
       </ul>
     </nav>
